Add python@3.10 and python@3.9

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -2,6 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "as-tree"
+brew "python@3.10", link: true
 brew "azure-cli"
 brew "b2-tools"
 brew "bat"
@@ -20,6 +21,7 @@ brew "mas"
 brew "neofetch"
 brew "netlify-cli"
 brew "prettier"
+brew "python@3.9", link: false
 brew "rclone"
 brew "restic"
 brew "ripgrep"
