Use Kap instead of LICEcap

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -40,7 +40,7 @@ cask "firefox"
 cask "gitahead"
 cask "istat-menus"
 cask "iterm2"
-cask "licecap"
+cask "kap"
 cask "microsoft-edge"
 cask "monodraw"
 cask "mos"
