--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -48,7 +48,7 @@ cask "gitahead"
 cask "istat-menus"
 cask "iterm2"
 cask "ledger-live"
-cask "licecap"
+cask "kap"
 cask "metaz"
 cask "microsoft-edge"
 cask "monodraw"
