--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -2,6 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "as-tree"
+brew "python@3.10", link: true
 brew "azure-cli"
 brew "bat"
 brew "clang-format"
@@ -17,6 +18,7 @@ brew "loc"
 brew "mas"
 brew "neofetch"
 brew "prettier"
+brew "python@3.9", link: false
 brew "rclone"
 brew "restic"
 brew "ripgrep"
