--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -57,6 +57,7 @@ mas "Amphetamine", id: 937984704
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Microsoft Excel", id: 462058435
+mas "Microsoft Outlook", id: 985367838
 mas "Microsoft PowerPoint", id: 462062816
 mas "Microsoft Word", id: 462054704
 mas "Numbers", id: 409203825
