--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -38,6 +38,7 @@ cask "1password"
 cask "appcleaner"
 cask "brave-browser"
 cask "daisydisk"
+cask "discord"
 cask "docker"
 cask "dotnet-sdk"
 cask "firefox"
