--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -74,6 +74,7 @@ mas "Deliveries", id: 290986013
 mas "Final Cut Pro", id: 424389933
 mas "GarageBand", id: 682658836
 mas "Keynote", id: 409183694
+mas "Magnet", id: 441258766
 mas "Microsoft Excel", id: 462058435
 mas "Microsoft PowerPoint", id: 462062816
 mas "Microsoft Word", id: 462054704
