--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -38,6 +38,7 @@ brew "wget"
 brew "yarn"
 brew "youtube-dl"
 cask "1password"
+cask "1password-cli"
 cask "appcleaner"
 cask "brave-browser"
 cask "daisydisk"
