Add youtube-dl, Magnet, and Pixelmator Pro

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -2,7 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "as-tree"
-brew "python@3.10", link: true
+brew "python@3.10"
 brew "azure-cli"
 brew "bat"
 brew "clang-format"
@@ -34,6 +34,7 @@ brew "tree"
 brew "typescript"
 brew "wget"
 brew "yarn"
+brew "youtube-dl"
 cask "1password"
 cask "appcleaner"
 cask "brave-browser"
@@ -58,11 +59,13 @@ cask "visual-studio-code"
 mas "Amphetamine", id: 937984704
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
+mas "Magnet", id: 441258766
 mas "Microsoft Excel", id: 462058435
 mas "Microsoft Outlook", id: 985367838
 mas "Microsoft PowerPoint", id: 462062816
 mas "Microsoft Word", id: 462054704
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
+mas "Pixelmator Pro", id: 1289583905
 mas "The Unarchiver", id: 425424353
 mas "Todoist", id: 585829637
