--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -2,7 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "as-tree"
-brew "python@3.10", link: true
+brew "python@3.10"
 brew "azure-cli"
 brew "b2-tools"
 brew "bat"
@@ -18,6 +18,7 @@ brew "git"
 brew "gnupg"
 brew "go"
 brew "guetzli"
+brew "imagemagick"
 brew "mas"
 brew "neofetch"
 brew "netlify-cli"
@@ -54,10 +55,10 @@ cask "ledger-live"
 cask "metaz"
 cask "microsoft-edge"
 cask "monodraw"
-cask "mos"
 cask "notion"
 cask "obs"
 cask "powershell"
+cask "scroll-reverser"
 cask "signal"
 cask "sketch"
 cask "spotify"
