--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,3 +1,4 @@
+tap "azure/functions"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
@@ -39,6 +40,7 @@ brew "vercel-cli"
 brew "wget"
 brew "yarn"
 brew "youtube-dl"
+brew "azure/functions/azure-functions-core-tools@4"
 cask "1password"
 cask "1password-cli"
 cask "appcleaner"
