--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -80,6 +80,7 @@ mas "Final Cut Pro", id: 424389933
 mas "Flighty", id: 1358823008
 mas "GarageBand", id: 682658836
 mas "GoodNotes", id: 1444383602
+mas "Infuse", id: 1136220934
 mas "Keynote", id: 409183694
 mas "MacFamilyTree 10", id: 1567970985
 mas "Magnet", id: 441258766
