--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -94,6 +94,7 @@ mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
 mas "RAW Power", id: 1157116444
 mas "Streaks", id: 963034692
+mas "TestFlight", id: 899247664
 mas "The Unarchiver", id: 425424353
 mas "Things", id: 904280696
 mas "Todoist", id: 585829637
