--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -60,6 +60,7 @@ mas "Amphetamine", id: 937984704
 mas "Compressor", id: 424390742
 mas "Final Cut Pro", id: 424389933
 mas "iMovie", id: 408981434
+mas "ISO8601", id: 1505772375
 mas "Keynote", id: 409183694
 mas "Magnet", id: 441258766
 mas "Microsoft Excel", id: 462058435
