--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -70,5 +70,6 @@ mas "Microsoft Word", id: 462054704
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Pixelmator Pro", id: 1289583905
+mas "TestFlight", id: 899247664
 mas "The Unarchiver", id: 425424353
 mas "Todoist", id: 585829637
