Use Optimus Player instead of VLC

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -60,6 +60,7 @@ cask "microsoft-edge"
 cask "monodraw"
 cask "notion"
 cask "obs"
+cask "optimus-player"
 cask "powershell"
 cask "signal"
 cask "sketch"
@@ -67,7 +68,6 @@ cask "spotify"
 cask "steam"
 cask "transmission"
 cask "visual-studio-code"
-cask "vlc"
 cask "zoom"
 mas "Affinity Designer", id: 824171161
 mas "Affinity Photo", id: 824183456
