Add nvim and vim

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -21,6 +21,7 @@ brew "imagemagick"
 brew "make"
 brew "mas"
 brew "neofetch"
+brew "neovim"
 brew "netlify-cli"
 brew "prettier"
 brew "python@3.9", link: false
@@ -37,6 +38,7 @@ brew "topgrade"
 brew "tree"
 brew "typescript"
 brew "vercel-cli"
+brew "vim"
 brew "wget"
 brew "yarn"
 brew "youtube-dl"
