--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -11,10 +11,11 @@ brew "clang-format"
 brew "coreutils"
 brew "deno"
 brew "fd"
+brew "gnutls"
+brew "ffmpeg"
 brew "fnm"
 brew "gh"
 brew "git"
-brew "gnutls"
 brew "gnupg"
 brew "go"
 brew "imagemagick"
