--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -3,7 +3,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 brew "as-tree"
-brew "python@3.10"
+brew "python@3.10", link: false
 brew "azure-cli"
 brew "b2-tools"
 brew "bat"
@@ -25,6 +25,7 @@ brew "neofetch"
 brew "neovim"
 brew "netlify-cli"
 brew "prettier"
+brew "python@3.11"
 brew "python@3.9", link: false
 brew "rclone"
 brew "restic"
