--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -19,13 +19,14 @@ brew "git"
 brew "gnupg"
 brew "go"
 brew "imagemagick"
+brew "python@3.11"
+brew "linode-cli"
 brew "make"
 brew "mas"
 brew "neofetch"
 brew "neovim"
 brew "netlify-cli"
 brew "prettier"
-brew "python@3.11"
 brew "python@3.9", link: false
 brew "rclone"
 brew "restic"
