--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -24,6 +24,7 @@ brew "python@3.11"
 brew "linode-cli"
 brew "make"
 brew "mas"
+brew "miniserve"
 brew "neofetch"
 brew "neovim"
 brew "netlify-cli"
