--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -1,6 +1,7 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "socsieng/tap"
 brew "as-tree"
 brew "python@3.10"
 brew "azure-cli"
@@ -36,6 +37,7 @@ brew "typescript"
 brew "wget"
 brew "yarn"
 brew "youtube-dl"
+brew "socsieng/tap/sendkeys"
 cask "1password"
 cask "appcleaner"
 cask "brave-browser"
