--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -41,6 +41,7 @@ brew "youtube-dl"
 brew "socsieng/tap/sendkeys"
 cask "1password"
 cask "appcleaner"
+cask "arc"
 cask "brave-browser"
 cask "daisydisk"
 cask "discord"
