--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -52,6 +52,7 @@ cask "gitahead"
 cask "istat-menus"
 cask "iterm2"
 cask "kap"
+cask "maccy"
 cask "microsoft-edge"
 cask "microsoft-teams"
 cask "monodraw"
