Use colima instead of Docker Desktop

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -8,10 +8,13 @@ brew "azure-cli"
 brew "b2-tools"
 brew "bat"
 brew "clang-format"
+brew "gnutls"
+brew "colima"
 brew "coreutils"
 brew "deno"
+brew "docker"
+brew "docker-compose"
 brew "fd"
-brew "gnutls"
 brew "ffmpeg"
 brew "flyctl"
 brew "fnm"
@@ -20,6 +23,8 @@ brew "git"
 brew "gnupg"
 brew "go"
 brew "imagemagick"
+brew "kubernetes-cli"
+brew "kubectx"
 brew "python@3.11"
 brew "linode-cli"
 brew "make"
@@ -54,7 +59,6 @@ cask "appcleaner"
 cask "brave-browser"
 cask "daisydisk"
 cask "discord"
-cask "docker"
 cask "dotnet-sdk"
 cask "firefox"
 cask "gitahead"
