--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -42,6 +42,7 @@ cask "firefox"
 cask "iterm2"
 cask "kap"
 cask "microsoft-edge"
+cask "microsoft-remote-desktop"
 cask "microsoft-teams"
 cask "monodraw"
 cask "obs"
