--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -38,6 +38,7 @@ cask "microsoft-remote-desktop"
 cask "microsoft-teams"
 cask "monodraw"
 cask "obs"
+cask "obsidian"
 cask "powershell"
 cask "spotify"
 cask "visual-studio-code"
