--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -30,7 +30,7 @@ brew "wget"
 brew "yarn"
 brew "socsieng/tap/sendkeys"
 cask "appcleaner"
-cask "dotnet"
+cask "dotnet-sdk"
 cask "firefox"
 cask "iterm2"
 cask "kap"
