Add bottom and tokei

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -6,6 +6,7 @@ brew "as-tree"
 brew "python@3.10"
 brew "azure-cli"
 brew "bat"
+brew "bottom"
 brew "coreutils"
 brew "cowsay"
 brew "delve"
@@ -23,6 +24,7 @@ brew "restic"
 brew "ripgrep"
 brew "rsync"
 brew "sd"
+brew "tokei"
 brew "topgrade"
 brew "tree"
 brew "typescript"
