--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -83,11 +83,10 @@ mas "Affinity Publisher", id: 881418622
 mas "Amphetamine", id: 937984704
 mas "Compressor", id: 424390742
 mas "Debit & Credit", id: 882637653
-mas "Deliveries", id: 290986013
 mas "Final Cut Pro", id: 424389933
 mas "Flighty", id: 1358823008
 mas "GarageBand", id: 682658836
-mas "GoodNotes", id: 1444383602
+mas "Goodnotes", id: 1444383602
 mas "Infuse", id: 1136220934
 mas "Keynote", id: 409183694
 mas "MacFamilyTree 10", id: 1567970985
@@ -99,6 +98,8 @@ mas "Motion", id: 434290957
 mas "Notability", id: 360593530
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
+mas "Parcel", id: 639968404
+mas "Photomator", id: 1444636541
 mas "Pixelmator Pro", id: 1289583905
 mas "RAW Power", id: 1157116444
 mas "Streaks", id: 963034692
