macos-work: Add latest brewfile

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -11,6 +11,7 @@ brew "coreutils"
 brew "cowsay"
 brew "delve"
 brew "fd"
+brew "fnm"
 brew "gh"
 brew "git"
 brew "gnupg"
@@ -24,6 +25,8 @@ brew "restic"
 brew "ripgrep"
 brew "rsync"
 brew "sd"
+brew "speedtest-cli"
+brew "tokei"
 brew "topgrade"
 brew "tree"
 brew "typescript"
@@ -44,6 +47,7 @@ cask "obsidian"
 cask "powershell"
 cask "spotify"
 cask "visual-studio-code"
+cask "zoom"
 mas "Amphetamine", id: 937984704
 mas "Compressor", id: 424390742
 mas "Final Cut Pro", id: 424389933
