macos: Remove topgrade, add tokei

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -44,7 +44,7 @@ brew "shfmt"
 brew "speedtest-cli"
 brew "swiftformat"
 brew "terraform"
-brew "topgrade"
+brew "tokei"
 brew "tree"
 brew "typescript"
 brew "vercel-cli"
