--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -2,6 +2,7 @@ tap "azure/functions"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "oven-sh/bun"
 brew "as-tree"
 brew "python@3.10"
 brew "azure-cli"
@@ -44,6 +45,7 @@ brew "wget"
 brew "yarn"
 brew "youtube-dl"
 brew "azure/functions/azure-functions-core-tools@4"
+brew "oven-sh/bun/bun"
 cask "1password"
 cask "appcleaner"
 cask "brave-browser"
