macos: Add google-chrome

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -53,6 +53,7 @@ cask "daisydisk"
 cask "discord"
 cask "dotnet-sdk"
 cask "firefox"
+cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "kap"
