macos-work: Add optimus-player

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -43,6 +43,7 @@ cask "microsoft-teams"
 cask "monodraw"
 cask "obs"
 cask "obsidian"
+cask "optimus-player"
 cask "powershell"
 cask "spotify"
 cask "visual-studio-code"
