--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -48,6 +48,7 @@ brew "azure/functions/azure-functions-core-tools@4"
 brew "oven-sh/bun/bun"
 cask "1password"
 cask "appcleaner"
+cask "arc"
 cask "brave-browser"
 cask "daisydisk"
 cask "discord"
