macos-work: Add dos2unix and r

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -10,6 +10,7 @@ brew "bottom"
 brew "coreutils"
 brew "cowsay"
 brew "delve"
+brew "dos2unix"
 brew "fd"
 brew "fnm"
 brew "gh"
@@ -20,6 +21,7 @@ brew "jq"
 brew "mas"
 brew "neofetch"
 brew "prettier"
+brew "r"
 brew "rclone"
 brew "restic"
 brew "ripgrep"
