--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -2,6 +2,7 @@ tap "azure/functions"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
+tap "socsieng/tap"
 tap "oven-sh/bun"
 brew "as-tree"
 brew "python@3.10"
@@ -45,6 +46,7 @@ brew "wget"
 brew "yarn"
 brew "youtube-dl"
 brew "azure/functions/azure-functions-core-tools@4"
+brew "socsieng/tap/sendkeys"
 brew "oven-sh/bun/bun"
 cask "1password"
 cask "appcleaner"
