macos-work: Add bun

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -2,6 +2,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "socsieng/tap"
+tap "oven-sh/bun"
 brew "as-tree"
 brew "python@3.10"
 brew "azure-cli"
@@ -34,6 +35,7 @@ brew "typescript"
 brew "wget"
 brew "yarn"
 brew "socsieng/tap/sendkeys"
+brew "oven-sh/bun/bun"
 cask "appcleaner"
 cask "dotnet-sdk"
 cask "firefox"
