macos: Add cowsay

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -13,6 +13,7 @@ brew "clang-format"
 brew "gnutls"
 brew "colima"
 brew "coreutils"
+brew "cowsay"
 brew "deno"
 brew "docker"
 brew "docker-compose"
