macos-work: Add clang-format

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -8,6 +8,7 @@ brew "python@3.10"
 brew "azure-cli"
 brew "bat"
 brew "bottom"
+brew "clang-format"
 brew "coreutils"
 brew "cowsay"
 brew "dos2unix"
