macos-work: Add vim

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -37,6 +37,7 @@ brew "swiftformat"
 brew "tokei"
 brew "tree"
 brew "typescript"
+brew "vim"
 brew "wget"
 brew "yarn"
 brew "socsieng/tap/sendkeys"
