--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -40,6 +40,7 @@ brew "typescript"
 brew "vim"
 brew "wget"
 brew "yarn"
+brew "youtube-dl"
 brew "socsieng/tap/sendkeys"
 brew "oven-sh/bun/bun"
 cask "appcleaner"
