--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -85,6 +85,7 @@ mas "Final Cut Pro", id: 424389933
 mas "Flighty", id: 1358823008
 mas "GarageBand", id: 682658836
 mas "Goodnotes", id: 1444383602
+mas "ISO8601", id: 1505772375
 mas "Infuse", id: 1136220934
 mas "Keynote", id: 409183694
 mas "MacFamilyTree 10", id: 1567970985
