macos: Add nvidia-geforce-now

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -65,6 +65,7 @@ cask "kap"
 cask "metaz"
 cask "monodraw"
 cask "notion"
+cask "nvidia-geforce-now"
 cask "obs"
 cask "obsidian"
 cask "optimus-player"
