--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -51,6 +51,7 @@ cask "microsoft-edge"
 cask "microsoft-remote-desktop"
 cask "microsoft-teams"
 cask "monodraw"
+cask "nvidia-geforce-now"
 cask "obs"
 cask "obsidian"
 cask "optimus-player"
