--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -45,6 +45,7 @@ brew "socsieng/tap/sendkeys"
 cask "appcleaner"
 cask "dotnet-sdk"
 cask "firefox"
+cask "godot"
 cask "iterm2"
 cask "kap"
 cask "microsoft-edge"
