--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -57,6 +57,7 @@ cask "daisydisk"
 cask "discord"
 cask "dotnet-sdk"
 cask "firefox"
+cask "godot"
 cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
