--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -4,6 +4,7 @@ tap "homebrew/cask"
 tap "homebrew/core"
 tap "oven-sh/bun"
 tap "socsieng/tap"
+brew "act"
 brew "as-tree"
 brew "azure-cli"
 brew "bat"
