--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -3,13 +3,17 @@ tap "homebrew/cask"
 tap "homebrew/core"
 tap "oven-sh/bun"
 tap "socsieng/tap"
+brew "act"
 brew "as-tree"
 brew "azure-cli"
 brew "bat"
 brew "bottom"
 brew "clang-format"
+brew "colima"
 brew "coreutils"
 brew "cowsay"
+brew "docker"
+brew "docker-compose"
 brew "dos2unix"
 brew "fd"
 brew "fnm"
