macos: Add launchcontrol

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -61,6 +61,7 @@ cask "google-chrome"
 cask "istat-menus"
 cask "iterm2"
 cask "kap"
+cask "launchcontrol"
 cask "metaz"
 cask "monodraw"
 cask "notion"
