--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -102,6 +102,7 @@ mas "Parcel", id: 639968404
 mas "Photomator", id: 1444636541
 mas "Pixelmator Pro", id: 1289583905
 mas "RAW Power", id: 1157116444
+mas "Soulver 3", id: 1508732804
 mas "Streaks", id: 963034692
 mas "TestFlight", id: 899247664
 mas "The Unarchiver", id: 425424353
