macos-work: More spring cleaning

--- a/macos-work/Brewfile
+++ b/macos-work/Brewfile
@@ -3,61 +3,46 @@ tap "homebrew/cask"
 tap "homebrew/core"
 tap "oven-sh/bun"
 tap "socsieng/tap"
-brew "act"
 brew "as-tree"
 brew "azure-cli"
 brew "bat"
 brew "bottom"
-brew "python@3.12"
-brew "clang-format"
-brew "colima"
 brew "coreutils"
 brew "cowsay"
-brew "docker"
-brew "docker-compose"
-brew "dos2unix"
 brew "fd"
 brew "fnm"
 brew "gh"
 brew "git"
 brew "gnupg"
 brew "go"
-brew "imagemagick"
 brew "jq"
 brew "make"
 brew "mas"
-brew "miniserve"
 brew "neofetch"
-brew "r"
+brew "python@3.12"
 brew "rclone"
 brew "restic"
 brew "ripgrep"
 brew "rsync"
 brew "sd"
-brew "shfmt"
-brew "speedtest-cli"
-brew "swiftformat"
 brew "tokei"
 brew "tree"
 brew "typescript"
+brew "vercel-cli"
 brew "vim"
 brew "wget"
-brew "yarn"
 brew "youtube-dl"
 brew "oven-sh/bun/bun"
 brew "socsieng/tap/sendkeys"
 cask "appcleaner"
 cask "dotnet-sdk"
 cask "firefox"
-cask "godot"
 cask "iterm2"
 cask "kap"
 cask "microsoft-edge"
 cask "microsoft-remote-desktop"
 cask "microsoft-teams"
 cask "monodraw"
-cask "nvidia-geforce-now"
-cask "obs"
 cask "obsidian"
 cask "optimus-player"
 cask "powershell"
